--- a/cliente/package.json
+++ b/cliente/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.2",
+    "bootstrap-icons": "^1.9.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
     "styled-components": "^5.3.6"
   },
