--- a/cliente/package.json
+++ b/cliente/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.4.2",
     "react-router-loading": "^1.0.0",
     "styled-components": "^5.3.6"
